# Unity

./: .gitattributes  .gitignore  Assembly-CSharp.csproj  README.md  实验二.sln
1/实验二_Data/: app.info  boot.config  globalgamemanagers  globalgamemanagers.assets  level0  resources.assets  resources.assets.resS
Assets/: Canvas (1).prefab  新建渲染器纹理.renderTexture
Assets/Prefebs/: AiChatOverlayCanvas_Runtime.prefab  DatePicker - Popup.prefab  Dropdown (Legacy).prefab  InputField (Legacy).prefab  Toggle.prefab  labmain.prefab  record_item.prefab  user_item.prefab  userrecord_item.prefab
Assets/Scenes/: 实验场景.unity
Assets/Settings/: High_PipelineAsset.asset  Low_PipelineAsset.asset  Medium_PipelineAsset.asset  Very High_PipelineAsset.asset  Very Low_PipelineAsset.asset
Assets/scripts/: ExperimentMode.cs  ModeUIManager.cs
Assets/代码/: AudioController.cs  AudioTest.cs  ButtonColorController.cs  ButtonHoverHandler.cs  CameraRaycastHandler.cs  ChangeForm.cs  ChangeImage.cs  ChangePosition.cs  ChangeTemperature.cs  ChangeTextColor.cs  Changepage.cs  ContentController.cs  ResizableRawImage.cs  ShuicaoCollider.cs  Xiping.cs  gaiban.cs  kaiguan.cs  marks.cs  wait.cs
Assets/材质/: desk.mat  ground.mat  容量瓶1.mat  容量瓶4.mat
Assets/模型/: 擦镜纸.max
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset  ShaderGraphSettings.asset  TagManager.asset
UserSettings/: EditorUserSettings.asset  Search.settings
UserSettings/Layouts/: default-2022.dwlt  (+1 more)
server_cpp/: CMakeLists.txt  README.md  schema.sql
server_cpp/src/: main.cpp
(+446 files in other folders)
